--- a/dustynadam2015/index.html
+++ b/dustynadam2015/index.html
@@ -3,15 +3,23 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+ 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+   <![endif]-->
 	<title>Dustyn and Adam</title>
+	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
 	<div class="container">
 		<div class="header">
-			<img src="images/dustynadam_left.jpg" alt="Dustyn and Adam">
+			<img src="images/dustynadam_left.jpg" alt="Dustyn and Adam" class="hidden-xs hidden-sm">
 			<img src="images/dustynadam.jpg" alt="Dustyn and Adam">
-			<img src="images/dustynadam_right.jpg" alt="Dustyn and Adam">
+			<img src="images/dustynadam_right.jpg" alt="Dustyn and Adam" class="hidden-xs hidden-sm">
 		</div>
 	</div>
 	<div class="container">
@@ -44,16 +52,32 @@
 		</div>
 		<div class="section">
 			<h1>RSVP</h1>
-			<form action="submit" method="get" accept-charset="utf-8">
-				<input type="text" name="name" placeholder="name"></input>
-				<input type="text" name="email" placeholder="email"></input>
-				<input type="text" name="accept" placeholder="We accept with pleasure/We regretfully decline"></input>
-				<textarea name="message" placeholder="Message (including dietary requirements and song requests"></textarea>
-			</form>
+			<div class="row">
+				<div class="col-sm-offset-2 col-sm-8">
+					<form action="submit" method="get" accept-charset="utf-8">
+						<div class="form-group">
+							<input type="text" name="name" placeholder="name" class="form-control"></input>
+						</div>
+						<div class="form-group">
+							<input type="text" name="email" placeholder="email" class="form-control"></input>
+						</div>
+						<div class="form-group">
+							<input type="text" name="accept" placeholder="We accept with pleasure/We regretfully decline" class="form-control"></input>
+						</div>
+						<div class="form-group">
+							<textarea name="message" placeholder="Message (including dietary requirements and song requests" class="form-control"></textarea>
+						</div>
+					</form>
+				</div>
+			</div>
 		</div>
 		<div class="section">
 			<h1>Social Media</h1>
 		</div>
 	</div>
+	<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+	<!-- Include all compiled plugins (below), or include individual files as needed -->
+	<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
